--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,5 +24,11 @@
         "react": {
             "version": "detect"
         }
-    }
+    },
+    "overrides": [
+        {
+            "files": ["*.ts", "*.tsx"],
+            "parser": "@typescript-eslint/parser"
+        }
+    ]
 }
