--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,9 @@
 {
     "singleQuote": true,
+    "trailingComma": "all",
+    "tabWidth": 4,
+    "semi": true,
+    "printWidth": 100,
     "plugins": [
         "prettier-plugin-organize-imports",
         "prettier-plugin-tailwindcss"
