--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,10 @@
 {
     "singleQuote": true,
     "trailingComma": "all",
-    "tabWidth": 4,
+    "tabWidth": 2,
     "semi": true,
     "printWidth": 100,
+    "useTabs": false,
     "plugins": [
         "prettier-plugin-organize-imports",
         "prettier-plugin-tailwindcss"
