--- a/.eslintrc
+++ b/.eslintrc
@@ -4,11 +4,7 @@
         "node": true
     },
     "extends": [
-        "eslint:recommended",
-        "plugin:@typescript-eslint/recommended",
-        "plugin:react/recommended",
-        "plugin:react-hooks/recommended",
-        "plugin:prettier/recommended"
+        "prettier"
     ],    
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
