refactor: improve code formatting and ESLint configuration
- Updated ESLint configuration with recommended plugins and rules
- Formatted React components with consistent code style
- Removed unnecessary code and simplified import statements
- Standardized code formatting across multiple components
- Improved code readability and maintainability

--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,11 @@
         "node": true
     },
     "extends": [
+        "eslint:recommended",
+        "plugin:@typescript-eslint/recommended",
+        "plugin:react/recommended",
+        "plugin:react-hooks/recommended",
+        "plugin:prettier/recommended",
         "prettier"
     ],    
     "parser": "@typescript-eslint/parser",
