--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "vite": "^6.0"
     },
     "dependencies": {
+        "@babel/plugin-proposal-decorators": "^7.25.9",
         "@radix-ui/react-avatar": "^1.1.2",
         "@radix-ui/react-checkbox": "^1.1.3",
         "@radix-ui/react-collapsible": "^1.1.2",
