--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "format": "prettier --write \"resources/**/*.{js,jsx,ts,tsx,css,md,json}\""
     },
     "devDependencies": {
-        "@headlessui/react": "^2.0.0",
+        "@headlessui/react": "^2.2.0",
         "@inertiajs/react": "^2.0.0",
         "@tailwindcss/forms": "^0.5.3",
         "@types/node": "^18.13.0",
@@ -39,6 +39,7 @@
     },
     "dependencies": {
         "@babel/plugin-proposal-decorators": "^7.25.9",
+        "@heroicons/react": "^2.2.0",
         "@hookform/resolvers": "^4.0.0",
         "@radix-ui/react-accordion": "^1.2.3",
         "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -67,14 +68,22 @@
         "@radix-ui/react-toggle": "^1.1.2",
         "@radix-ui/react-toggle-group": "^1.1.2",
         "@radix-ui/react-tooltip": "^1.1.8",
+        "@tiptap/extension-image": "^2.11.5",
+        "@tiptap/extension-link": "^2.11.5",
+        "@tiptap/extension-placeholder": "^2.11.5",
+        "@tiptap/react": "^2.11.5",
+        "@tiptap/starter-kit": "^2.11.5",
+        "@types/react-beautiful-dnd": "^13.1.8",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "cmdk": "^1.0.0",
         "date-fns": "^3.6.0",
         "embla-carousel-react": "^8.5.2",
         "input-otp": "^1.4.2",
+        "jotai": "^2.12.1",
         "lucide-react": "^0.474.0",
         "next-themes": "^0.4.4",
+        "react-beautiful-dnd": "^13.1.1",
         "react-day-picker": "^8.10.1",
         "react-hook-form": "^7.54.2",
         "react-resizable-panels": "^2.1.7",
