--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@headlessui/react": "^2.2.0",
         "@inertiajs/react": "^2.0.0",
         "@tailwindcss/forms": "^0.5.3",
+        "@tailwindcss/typography": "^0.5.16",
         "@types/node": "^18.13.0",
         "@types/react": "^18.0.28",
         "@types/react-dom": "^18.0.10",
@@ -68,19 +69,36 @@
         "@radix-ui/react-toggle": "^1.1.2",
         "@radix-ui/react-toggle-group": "^1.1.2",
         "@radix-ui/react-tooltip": "^1.1.8",
+        "@tiptap/core": "^2.11.5",
+        "@tiptap/extension-character-count": "^2.11.5",
+        "@tiptap/extension-code-block-lowlight": "^2.11.5",
+        "@tiptap/extension-color": "^2.11.5",
         "@tiptap/extension-image": "^2.11.5",
         "@tiptap/extension-link": "^2.11.5",
         "@tiptap/extension-placeholder": "^2.11.5",
+        "@tiptap/extension-subscript": "^2.11.5",
+        "@tiptap/extension-superscript": "^2.11.5",
+        "@tiptap/extension-table": "^2.11.5",
+        "@tiptap/extension-table-cell": "^2.11.5",
+        "@tiptap/extension-table-header": "^2.11.5",
+        "@tiptap/extension-table-row": "^2.11.5",
+        "@tiptap/extension-task-item": "^2.11.5",
+        "@tiptap/extension-task-list": "^2.11.5",
+        "@tiptap/extension-typography": "^2.11.5",
+        "@tiptap/pm": "^2.11.5",
         "@tiptap/react": "^2.11.5",
         "@tiptap/starter-kit": "^2.11.5",
+        "@tiptap/suggestion": "^2.11.5",
         "@types/react-beautiful-dnd": "^13.1.8",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "cmdk": "^1.0.0",
         "date-fns": "^3.6.0",
         "embla-carousel-react": "^8.5.2",
+        "fuse.js": "^7.1.0",
         "input-otp": "^1.4.2",
         "jotai": "^2.12.1",
+        "lowlight": "^3.3.0",
         "lucide-react": "^0.474.0",
         "next-themes": "^0.4.4",
         "react-beautiful-dnd": "^13.1.1",
@@ -91,6 +109,7 @@
         "sonner": "^1.7.4",
         "tailwind-merge": "^3.0.1",
         "tailwindcss-animate": "^1.0.7",
+        "tippy.js": "^6.3.7",
         "vaul": "^1.1.2",
         "zod": "^3.24.2"
     }
