--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@inertiajs/react": "^2.0.0",
         "@tailwindcss/forms": "^0.5.3",
         "@tailwindcss/typography": "^0.5.16",
+        "@tanstack/eslint-plugin-query": "^5.66.1",
         "@types/node": "^18.13.0",
         "@types/react": "^18.0.28",
         "@types/react-dom": "^18.0.10",
@@ -69,6 +70,8 @@
         "@radix-ui/react-toggle": "^1.1.2",
         "@radix-ui/react-toggle-group": "^1.1.2",
         "@radix-ui/react-tooltip": "^1.1.8",
+        "@tanstack/react-query": "^5.66.7",
+        "@tanstack/react-query-devtools": "^5.66.7",
         "@tiptap/core": "^2.11.5",
         "@tiptap/extension-character-count": "^2.11.5",
         "@tiptap/extension-code-block-lowlight": "^2.11.5",
