--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/framework": "^11.31",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
+        "opcodesio/log-viewer": "^3.15",
         "spatie/laravel-data": "^4.13",
         "spatie/laravel-permission": "^6.14",
         "stancl/tenancy": "^3.8",
