feat: enhance quiz module with new question types and improved editing experience
- Added support for True/False and Fill in the Blank question types
- Implemented dynamic question type rendering in QuizEditor
- Enhanced question editing with context menus and more intuitive interfaces
- Updated schemas and types to support new question types
- Improved module interaction with framer-motion and context menu components

--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
         "cmdk": "^1.0.0",
         "date-fns": "^3.6.0",
         "embla-carousel-react": "^8.5.2",
+        "framer-motion": "^12.4.7",
         "fuse.js": "^7.1.0",
         "input-otp": "^1.4.2",
         "jotai": "^2.12.1",
