--- a/.prettierrc
+++ b/.prettierrc
@@ -5,6 +5,8 @@
     "semi": true,
     "printWidth": 100,
     "useTabs": false,
+    "bracketSpacing": true,
+    "arrowParens": "always",
     "plugins": [
         "prettier-plugin-organize-imports",
         "prettier-plugin-tailwindcss"
