--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     "laravel/tinker": "^2.9",
     "opcodesio/log-viewer": "^3.15",
     "spatie/laravel-data": "^4.13",
+    "spatie/laravel-medialibrary": "^11.12",
     "spatie/laravel-permission": "^6.14",
     "stancl/tenancy": "^3.8",
     "tightenco/ziggy": "^2.0"
